# edulance

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  manage.py  populate_skills.py  pyproject.toml  requirements.txt
api/: apps.py  urls.py  views.py
collaborate/: forms.py  models.py  serializers.py  urls.py  views.py
collaborate/migrations/: 0001_initial.py  0002_collaborationpost_updated_at_and_more.py  0003_skill_remove_collaborationpost_required_skills_and_more.py  0004_delete_skill_alter_collaborationpost_required_skills.py  0005_collaborationpost_applicants.py  0006_alter_collaborationpost_activity_type.py
collaborate/templatetags/: collab_tags.py
common/: models.py  tasks.py  utils.py
edulance_root/: asgi.py  celery.py  import logging.txt  settings.py  urls.py  wsgi.py
static/css/: base.css  home.css  login.css  profile.css  styles.css
static/js/: base.js  collaborate.js  profile.js
templates/: base.html  index.html
templates/collaborate/: collaboration.html  post.html  post_detail.html
templates/users/: home.html  login.html  profile.html  register.html
users/: admin.py  api_views.py  models.py  pipeline.py  resume.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_email_verified_remove_user_is_oauth_user_and_more.py  0003_alter_user_password_alter_user_username.py  0004_user_avatar_url.py
users/templates/: register.html
