[project]
name = "edulance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-cockroachdb>=5.2",
    "django-redis>=5.4.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
    "social-auth-app-django>=5.4.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-cohere>=0.4.4",
    "cohere>=5.15.0",
    "faiss-cpu>=1.11.0",
    "pydantic>=2.11.5",
    "pypdf>=5.5.0",
]
